<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="hello">Hello, OpenGL ES 2.0!</string>
    <string name="app_name">SHOGGOTH</string>
    <string name="switch_view">Switch View</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="textbox">"HELLO</string>
    <string name="hello_world">Hello! click the button above to get started.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="start">Start Streaming</string>
    <string name="serverHint">Enter Server IP or Name</string>
    <string name="daneServer">http://larsendt.com:1234</string>
    <string name="Server">server_help</string>
    <string name="server_help">SERVER</string>
    <string name="terrain_help">TERRAIN TYPE</string>
    <string name="terrain_hint">Type</string>
    <string name="terrain_default">mountains</string>
    <string-array name="terrain_type_array">
        <item>mountains</item>
        <item>plains</item>
        <item>oceans</item>
        <item>desert</item>
    </string-array>

</resources>